<resources>
    <string name="app_name">Daily Dozen</string>
    <string name="beans">Beans</string>
    <string name="berries">Berries</string>
    <string name="other_fruits">Other Fruits</string>
    <string name="cruciferous_vegetables">Cruciferous Vegetables</string>
    <string name="greens">Greens</string>
    <string name="other_vegetables">Other Vegetables</string>
    <string name="flaxseeds">Flaxseeds</string>
    <string name="nuts">Nuts and Seeds</string>
    <string name="spices">Herbs and Spices</string>
    <string name="whole_grains">Whole Grains</string>
    <string name="beverages">Beverages</string>
    <string name="exercise">Exercise</string>
    <string name="vitamin_b12">Vitamin B12</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="serving_sizes">Serving Sizes</string>
    <string name="types">Types</string>
    <string name="history">History</string>
    <string name="servings_some">Some servings</string>
    <string name="servings_all">All servings</string>
    <string name="servings">Servings</string>
    <string name="out_of">out of</string>
    <string name="moving_average">Moving Average</string>
    <string name="about">About</string>
    <string name="about_this_app">About this app</string>
    <string name="latest_videos">Latest Videos</string>
    <string name="url_latest_videos" translatable="false">http://nutritionfacts.org/videos/</string>
    <string name="book_title" translatable="false">How Not to Die</string>
    <string name="url_book" translatable="false">http://nutritionfacts.org/book/</string>
    <string name="donate">Donate</string>
    <string name="url_donate" translatable="false">https://nutritionfacts.org/donate/</string>
    <string name="subscribe">Subscribe</string>
    <string name="url_subscribe" translatable="false">http://nutritionfacts.org/subscribe/</string>
    <string name="open_source">Open Source</string>
    <string name="url_open_source" translatable="false">http://nutritionfacts.org/open-source/</string>
    <string name="nutritionfacts_title" translatable="false">nutritionfacts.org</string>
    <string name="url_nutritionfacts" translatable="false">http://nutritionfacts.org</string>
    <string name="name_john_slavick" translatable="false">John Slavick</string>
    <string name="url_john_slavick" translatable="false">http://johnslavick.com</string>
    <string name="library_activeandroid" translatable="false">ActiveAndroid</string>
    <string name="library_android_iconify" translatable="false">android-iconify</string>
    <string name="library_butterknife">ButterKnife</string>
    <string name="library_caldroid" translatable="false">Caldroid</string>
    <string name="library_eventbus" translatable="false">EventBus</string>
    <string name="library_likeanimation" translatable="false">LikeAnimation</string>
    <string name="library_mpandroidchart" translatable="false">MPAndroidChart</string>
    <string name="url_activeandroid" translatable="false">https://github.com/pardom/ActiveAndroid</string>
    <string name="url_android_iconify" translatable="false">https://github.com/JoanZapata/android-iconify</string>
    <string name="url_butterknife" translatable="false">https://github.com/JakeWharton/butterknife</string>
    <string name="url_caldroid" translatable="false">https://github.com/roomorama/Caldroid</string>
    <string name="url_eventbus" translatable="false">https://github.com/greenrobot/EventBus</string>
    <string name="url_likeanimation" translatable="false">https://github.com/frogermcs/LikeAnimation/</string>
    <string name="url_mpandroidchart" translatable="false">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="permission_needed_to_write_storage">Can\'t backup without permission to write to storage</string>
    <string name="backup_failed">Backup failed</string>
    <string name="restore_failed">Restore failed</string>
    <string name="backup_success">Backup successful</string>
    <string name="restore_success">Restore successful</string>
    <string name="restore_confirm_title">Restore Backup</string>
    <string name="restore_confirm_message">Any existing data will be deleted before restoring from backup. Do you wish to continue?</string>
    <string name="backup_mimetype" translatable="false">message/rfc822</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="backup">Backup</string>
    <string name="food_info">Food Info</string>
    <string name="food_history">Food History</string>
    <string name="icon_info" translatable="false">{fa-info-circle 12dp @color/gray}</string>
    <string name="icon_calendar" translatable="false">{fa-calendar 16dp @color/gray_dark}</string>
    <string name="num_servings_max" translatable="false">24</string>
    <string name="icon_chart" translatable="false">{fa-bar-chart 20dp @color/gray_dark}</string>
    <string name="daily_servings_history">Daily Servings History</string>
    <string name="no_servings_recorded">You have not recorded any servings yet!</string>
    <string name="task_backup_title">Backing up</string>
    <string name="task_restore_title">Restoring</string>
    <string name="task_calculating_streaks_title">Calculating streaks</string>
    <string name="back_to_today">Back to today</string>
    <string name="debug">Debug</string>
    <string name="debug_clear_data">Clear all data</string>
    <string name="debug_clear_data_message">This will delete all entered Servings. Do you wish to continue?</string>
    <string name="OK">OK</string>
    <string name="dialog_streaks_title">New feature: Streaks!</string>
    <string name="dialog_streaks_message">Your database will now be upgraded to support the new streaks feature.</string>
    <string name="dialog_no_email_apps_title">No email apps found</string>
    <string name="dialog_no_email_apps_message">Backing up your data requires you to have an email app installed so you can email the .csv backup file to yourself. Please install an email app and try again.</string>
    <string name="debug_generate_random_data">Generate random data</string>
    <string name="debug_generate_full_data">Generate full data</string>
    <string name="debug_generate_data_message">All existing data will be replaced. Do you wish to continue?</string>
    <string name="task_generating_random_data">Generating random data</string>
    <string name="task_loading_servings_history_title">Loading Servings History</string>
    <string name="time_scale">Time Scale</string>
    <string name="history_to_generate">History to Generate</string>
    <string name="date_servings_star" translatable="false">{fa-star 24dp @color/gold}</string>
    <string name="date_servings_star_large" translatable="false">{fa-star 64dp @color/gold}</string>
    <string name="welcome_to_my_daily_dozen">Welcome to my Daily Dozen!</string>
    <string name="activity_welcome_text">Use this app on a daily basis to keep track of the foods I recommend for optimal health and longevity in my book How Not to Die.</string>
    <string name="dialog_ask_user_to_rate_app_title">Do you like this app?</string>
    <string name="dialog_ask_user_to_rate_app_message">Please give us feedback in the Play Store.</string>
    <string name="rate_now">Give Feedback</string>
    <string name="not_now">Not Now</string>
    <string name="format_version" formatted="false">version %s</string>
    <string name="format_num_days" formatted="false">%d days</string>
    <string name="daily_reminder_title">Daily Dozen Reminder</string>
    <string name="daily_reminder_text">Update your servings for today</string>
    <string name="daily_reminder_settings">Daily Reminder Settings</string>
    <string name="enable_daily_reminder">Enable Daily Reminder</string>
    <string name="remind_me_at">Remind me at</string>
    <string name="vibrate">Vibrate</string>
    <string name="play_sound">Play Sound</string>
    <string name="videos">Videos</string>
    <string name="units">Units</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="vitamin_divider_text">Vitamins</string>
    <string name="dialog_vitamin_explanation_text">Vitamin B12 and Vitamin D are essential for your health but do not count towards your daily servings.\n\nThey are included in this app to provide you with an easy way to track your intake.</string>
    <string name="food_info_videos_beans" translatable="false">beans</string>
    <string name="food_info_videos_berries" translatable="false">berries</string>
    <string name="food_info_videos_fruits" translatable="false">fruit</string>
    <string name="food_info_videos_cruciferous" translatable="false">cruciferous-vegetables</string>
    <string name="food_info_videos_greens" translatable="false">greens</string>
    <string name="food_info_videos_vegetables" translatable="false">vegetables</string>
    <string name="food_info_videos_flaxseeds" translatable="false">flax-seeds</string>
    <string name="food_info_videos_nuts" translatable="false">nuts</string>
    <string name="food_info_videos_spices" translatable="false">spices</string>
    <string name="food_info_videos_whole_grains" translatable="false">grains</string>
    <string name="food_info_videos_beverages" translatable="false">beverages</string>
    <string name="food_info_videos_exercise" translatable="false">exercise</string>
    <string name="food_info_videos_vitamin_b12" translatable="false">vitamin-b12</string>
    <string name="food_info_videos_vitamin_d" translatable="false">vitamin-d-supplements</string>
    <string-array name="food_id_names" translatable="false">
        <item>Beans</item>
        <item>Berries</item>
        <item>Other Fruits</item>
        <item>Cruciferous Vegetables</item>
        <item>Greens</item>
        <item>Other Vegetables</item>
        <item>Flaxseeds</item>
        <item>Nuts</item>
        <item>Spices</item>
        <item>Whole Grains</item>
        <item>Beverages</item>
        <item>Exercise</item>
        <item>Vitamin B12</item>
        <item>Vitamin D</item>
    </string-array>
    <string-array name="food_names">
        <item>@string/beans</item>
        <item>@string/berries</item>
        <item>@string/other_fruits</item>
        <item>@string/cruciferous_vegetables</item>
        <item>@string/greens</item>
        <item>@string/other_vegetables</item>
        <item>@string/flaxseeds</item>
        <item>@string/nuts</item>
        <item>@string/spices</item>
        <item>@string/whole_grains</item>
        <item>@string/beverages</item>
        <item>@string/exercise</item>
        <item>@string/vitamin_b12</item>
        <item>@string/vitamin_d</item>
    </string-array>
    <string-array name="notification_icon_food_names">
        <item>@string/beans</item>
        <item>@string/berries</item>
        <item>@string/other_fruits</item>
        <item>@string/cruciferous_vegetables</item>
        <item>@string/other_vegetables</item>
        <item>@string/spices</item>
    </string-array>
    <string-array name="about_text_lines">
        <item>This app was created by John Slavick.</item>
        <item />
        <item>The following open source libraries are used: ActiveAndroid, android-iconify, ButterKnife, Caldroid, EventBus, LikeAnimation, and MPAndroidChart.</item>
        <item />
        <item>Special thanks to the volunteer efforts of the creators of the previous app: Chan Kruse, Allan Portera, and Sangeeta Kumar.</item>
    </string-array>
</resources>