<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/caldroid_black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            style="@style/PrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enable_daily_reminder"
            android:textColor="@color/colorPrimaryText_DarkTheme" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/daily_reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:theme="@style/SwitchCompatDark" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:id="@+id/daily_reminder_config_container"
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary_DarkTheme"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingTop="10dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/daily_reminder_set_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remind_me_at"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/daily_reminder_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:backgroundTint="@android:color/white"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_sound"
                    android:textColor="@android:color/white" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/daily_reminder_play_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:theme="@style/SwitchCompatDark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/daily_reminder_vibrate_container"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate"
                    android:textColor="@android:color/white" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/daily_reminder_vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:theme="@style/SwitchCompatDark" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>